fix: styles on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 }
 
 .App .jwplayer {
-  width: 1000px !important;
+  max-width: 1000px !important;
 }
 
 .App ul {
